# AI_TASKS

./: README.md
TodoApp01/: README.md  TECH_ARCHITECTURE.md  req.md
TodoApp01/backend/: README.md  database.db
TodoApp01/backend/app/: database.py  main.py  schemas.py
TodoApp01/frontend/: README.md  package-lock.json  package.json
TodoApp01/frontend/src/: App.css  App.tsx
c_program/: .gitignore  LICENSE  Makefile  README.md
c_program/include/: contact_book.h
c_program/src/: contact_operations.c  file_operations.c  main.c  utils.c
cpp_program/: .gitignore  CMakeLists.txt  README.md  build.sh  example_script.txt
cpp_program/include/: BatchOperations.h  CLI.h  Common.h  FileManager.h  SearchEngine.h
cpp_program/src/: BatchOperations.cpp  CLI.cpp  Common.cpp  FileManager.cpp  SearchEngine.cpp  main.cpp
project-management-app/: PRD.md  README.md  package-lock.json  package.json
project-management-app/src/: App.tsx
project-management-app/src/components/: Dashboard.tsx  Layout.tsx  ProgressVisualization.tsx  ProjectList.tsx  TaskManagement.tsx
project-management-app/src/types/: index.ts
task_2/: 第二次课程作业.txt
task_2/todo-app/: README.md  index.html  script.js  style.css
todoapp-java/backend/: README.md  pom.xml  spec-req.md
xu-ai-news-rag/: .gitignore  README.md  docker-compose.yml
xu-ai-news-rag/backend/: Dockerfile  pom.xml
xu-ai-news-rag/docs/: ARCHITECTURE.md  PRD.md  PROTOTYPE.md  api.postman_collection.json
xu-ai-news-rag/frontend/: index.html  package-lock.json  package.json
xu-ai-news-rag/rag-worker/: Dockerfile  requirements.txt
(+77 files in other folders)
